// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<space> demo: > render [align] correctly 1`] = `
<div>
  <div class="sd:mb-5"><span class="sd-radio-group-button sd-radio-group-size-medium sd-radio-group-direction-horizontal"><label class="sd-radio-button"><input type="radio" class="sd-radio-target" value="start"><span class="sd-radio-button-content">start</span></label><label class="sd-radio-button sd-radio-checked"><input type="radio" checked="" class="sd-radio-target" value="center"><span class="sd-radio-button-content">center</span></label><label class="sd-radio-button"><input type="radio" class="sd-radio-target" value="end"><span class="sd-radio-button-content">end</span></label><label class="sd-radio-button"><input type="radio" class="sd-radio-target" value="baseline"><span class="sd-radio-button-content">baseline</span></label></span></div>
  <div class="sd-space sd-space-horizontal sd-space-align-center sd:bg-[var(--color-fill-2)] sd:p-2.5" style="column-gap: 8px; row-gap: 8px;">
    <!---->
    <div class="sd-space-item"><span class="sd-typography">Space:<!----><!--v-if--><!--v-if--><!--v-if--></span></div>
    <!---->
    <div class="sd-space-item"><button class="sd-btn sd-btn-primary sd-btn-shape-square sd-btn-size-medium sd-btn-status-normal" type="button">
        <!--v-if-->Item2
      </button></div>
    <!---->
    <div class="sd-space-item">
      <div class="sd-card sd-card-size-medium sd-card-bordered">
        <div class="sd-card-header">
          <div class="sd-card-header-title">Card</div>
          <!---->
        </div>
        <!---->
        <div class="sd-card-body"> Card content
          <!---->
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<space> demo: > render [basic] correctly 1`] = `
<div class="sd-space sd-space-horizontal sd-space-align-center" style="column-gap: 8px; row-gap: 8px;">
  <!---->
  <div class="sd-space-item"><span class="sd-typography">Space:<!----><!--v-if--><!--v-if--><!--v-if--></span></div>
  <!---->
  <div class="sd-space-item"><button class="sd-btn sd-btn-primary sd-btn-shape-square sd-btn-size-medium sd-btn-status-normal" type="button">
      <!--v-if-->Item1
    </button></div>
  <!---->
  <div class="sd-space-item"><button class="sd-btn sd-btn-primary sd-btn-shape-square sd-btn-size-medium sd-btn-status-normal" type="button">
      <!--v-if-->Item2
    </button></div>
  <!---->
  <div class="sd-space-item"><button type="button" role="switch" aria-checked="true" class="sd-switch sd-switch-type-circle sd-switch-checked"><span class="sd-switch-handle"><span class="sd-switch-handle-icon"></span></span><!--  prettier-ignore  -->
      <!--v-if-->
    </button></div>
</div>
`;

exports[`<space> demo: > render [size] correctly 1`] = `
<div>
  <div class="sd:mb-5"><span class="sd-radio-group-button sd-radio-group-size-medium sd-radio-group-direction-horizontal"><label class="sd-radio-button"><input type="radio" class="sd-radio-target" value="mini"><span class="sd-radio-button-content">mini</span></label><label class="sd-radio-button"><input type="radio" class="sd-radio-target" value="small"><span class="sd-radio-button-content">small</span></label><label class="sd-radio-button sd-radio-checked"><input type="radio" checked="" class="sd-radio-target" value="medium"><span class="sd-radio-button-content">medium</span></label><label class="sd-radio-button"><input type="radio" class="sd-radio-target" value="large"><span class="sd-radio-button-content">large</span></label></span></div>
  <div class="sd-space sd-space-horizontal sd-space-align-center" style="column-gap: 16px; row-gap: 16px;">
    <!---->
    <div class="sd-space-item"><button class="sd-btn sd-btn-primary sd-btn-shape-square sd-btn-size-medium sd-btn-status-normal" type="button">
        <!--v-if-->Item1
      </button></div>
    <!---->
    <div class="sd-space-item"><button class="sd-btn sd-btn-primary sd-btn-shape-square sd-btn-size-medium sd-btn-status-normal" type="button">
        <!--v-if-->Item2
      </button></div>
    <!---->
    <div class="sd-space-item"><button class="sd-btn sd-btn-primary sd-btn-shape-square sd-btn-size-medium sd-btn-status-normal" type="button">
        <!--v-if-->Item3
      </button></div>
  </div>
</div>
`;

exports[`<space> demo: > render [split] correctly 1`] = `
<div class="sd-space sd-space-horizontal sd-space-align-center" style="column-gap: 8px; row-gap: 8px;">
  <!---->
  <div class="sd-space-item"><button class="sd-btn sd-btn-primary sd-btn-shape-square sd-btn-size-medium sd-btn-status-normal" type="button">
      <!--v-if-->Item1
    </button></div>
  <div class="sd-space-item-split">
    <div role="separator" class="sd-divider sd-divider-vertical" style="margin: 0px;">
      <!---->
    </div>
  </div>
  <div class="sd-space-item"><button class="sd-btn sd-btn-primary sd-btn-shape-square sd-btn-size-medium sd-btn-status-normal" type="button">
      <!--v-if-->Item2
    </button></div>
  <div class="sd-space-item-split">
    <div role="separator" class="sd-divider sd-divider-vertical" style="margin: 0px;">
      <!---->
    </div>
  </div>
  <div class="sd-space-item"><button class="sd-btn sd-btn-primary sd-btn-shape-square sd-btn-size-medium sd-btn-status-normal" type="button">
      <!--v-if-->Item3
    </button></div>
  <div class="sd-space-item-split">
    <div role="separator" class="sd-divider sd-divider-vertical" style="margin: 0px;">
      <!---->
    </div>
  </div>
  <div class="sd-space-item"><button type="button" role="switch" aria-checked="false" class="sd-switch sd-switch-type-circle"><span class="sd-switch-handle"><span class="sd-switch-handle-icon"></span></span><!--  prettier-ignore  -->
      <!--v-if-->
    </button></div>
</div>
<div role="separator" class="sd-divider sd-divider-horizontal">
  <!---->
</div>
<div class="sd-space sd-space-horizontal sd-space-align-center" style="column-gap: 8px; row-gap: 8px;">
  <!---->
  <div class="sd-space-item"><a class="sd-link sd-link-status-normal sd-link-hoverless" type="primary">
      <!--v-if--><span class="sd-link-content sd-ellipsis sd-ellipsis--single-line" style="overflow: hidden; text-overflow: ellipsis; white-space: nowrap;"><span class="sd-ellipsis-content">Link1</span></span>
    </a></div>
  <div class="sd-space-item-split">
    <div role="separator" class="sd-divider sd-divider-vertical" style="margin: 0px;">
      <!---->
    </div>
  </div>
  <div class="sd-space-item"><a class="sd-link sd-link-status-normal sd-link-hoverless" type="primary">
      <!--v-if--><span class="sd-link-content sd-ellipsis sd-ellipsis--single-line" style="overflow: hidden; text-overflow: ellipsis; white-space: nowrap;"><span class="sd-ellipsis-content">Link2</span></span>
    </a></div>
  <div class="sd-space-item-split">
    <div role="separator" class="sd-divider sd-divider-vertical" style="margin: 0px;">
      <!---->
    </div>
  </div>
  <div class="sd-space-item"><a class="sd-link sd-link-status-normal sd-link-hoverless" type="primary">
      <!--v-if--><span class="sd-link-content sd-ellipsis sd-ellipsis--single-line" style="overflow: hidden; text-overflow: ellipsis; white-space: nowrap;"><span class="sd-ellipsis-content">Link3</span></span>
    </a></div>
</div>
`;

exports[`<space> demo: > render [vertical] correctly 1`] = `
<div class="sd-space sd-space-vertical sd-space-fill" style="column-gap: 8px; row-gap: 8px;">
  <!---->
  <div class="sd-space-item"><button class="sd-btn sd-btn-primary sd-btn-shape-square sd-btn-size-medium sd-btn-status-normal sd-btn-long" type="button">
      <!--v-if-->Item1
    </button></div>
  <!---->
  <div class="sd-space-item"><button class="sd-btn sd-btn-primary sd-btn-shape-square sd-btn-size-medium sd-btn-status-normal sd-btn-long" type="button">
      <!--v-if-->Item2
    </button></div>
  <!---->
  <div class="sd-space-item"><button class="sd-btn sd-btn-primary sd-btn-shape-square sd-btn-size-medium sd-btn-status-normal sd-btn-long" type="button">
      <!--v-if-->Item3
    </button></div>
</div>
`;

exports[`<space> demo: > render [wrap] correctly 1`] = `
<div class="sd-space sd-space-horizontal sd-space-align-center sd-space-wrap" style="column-gap: 8px; row-gap: 8px;">
  <!---->
  <div class="sd-space-item"><button class="sd-btn sd-btn-primary sd-btn-shape-square sd-btn-size-medium sd-btn-status-normal" type="button">
      <!--v-if-->Item1
    </button></div>
  <!---->
  <div class="sd-space-item"><button class="sd-btn sd-btn-primary sd-btn-shape-square sd-btn-size-medium sd-btn-status-normal" type="button">
      <!--v-if-->Item2
    </button></div>
  <!---->
  <div class="sd-space-item"><button class="sd-btn sd-btn-primary sd-btn-shape-square sd-btn-size-medium sd-btn-status-normal" type="button">
      <!--v-if-->Item3
    </button></div>
  <!---->
  <div class="sd-space-item"><button class="sd-btn sd-btn-primary sd-btn-shape-square sd-btn-size-medium sd-btn-status-normal" type="button">
      <!--v-if-->Item4
    </button></div>
  <!---->
  <div class="sd-space-item"><button class="sd-btn sd-btn-primary sd-btn-shape-square sd-btn-size-medium sd-btn-status-normal" type="button">
      <!--v-if-->Item5
    </button></div>
  <!---->
  <div class="sd-space-item"><button class="sd-btn sd-btn-primary sd-btn-shape-square sd-btn-size-medium sd-btn-status-normal" type="button">
      <!--v-if-->Item6
    </button></div>
  <!---->
  <div class="sd-space-item"><button class="sd-btn sd-btn-primary sd-btn-shape-square sd-btn-size-medium sd-btn-status-normal" type="button">
      <!--v-if-->Item7
    </button></div>
  <!---->
  <div class="sd-space-item"><button class="sd-btn sd-btn-primary sd-btn-shape-square sd-btn-size-medium sd-btn-status-normal" type="button">
      <!--v-if-->Item8
    </button></div>
  <!---->
  <div class="sd-space-item"><button class="sd-btn sd-btn-primary sd-btn-shape-square sd-btn-size-medium sd-btn-status-normal" type="button">
      <!--v-if-->Item9
    </button></div>
  <!---->
  <div class="sd-space-item"><button class="sd-btn sd-btn-primary sd-btn-shape-square sd-btn-size-medium sd-btn-status-normal" type="button">
      <!--v-if-->Item10
    </button></div>
  <!---->
  <div class="sd-space-item"><button class="sd-btn sd-btn-primary sd-btn-shape-square sd-btn-size-medium sd-btn-status-normal" type="button">
      <!--v-if-->Item11
    </button></div>
  <!---->
  <div class="sd-space-item"><button class="sd-btn sd-btn-primary sd-btn-shape-square sd-btn-size-medium sd-btn-status-normal" type="button">
      <!--v-if-->Item12
    </button></div>
  <!---->
  <div class="sd-space-item"><button class="sd-btn sd-btn-primary sd-btn-shape-square sd-btn-size-medium sd-btn-status-normal" type="button">
      <!--v-if-->Item13
    </button></div>
  <!---->
  <div class="sd-space-item"><button class="sd-btn sd-btn-primary sd-btn-shape-square sd-btn-size-medium sd-btn-status-normal" type="button">
      <!--v-if-->Item14
    </button></div>
  <!---->
  <div class="sd-space-item"><button class="sd-btn sd-btn-primary sd-btn-shape-square sd-btn-size-medium sd-btn-status-normal" type="button">
      <!--v-if-->Item15
    </button></div>
  <!---->
  <div class="sd-space-item"><button class="sd-btn sd-btn-primary sd-btn-shape-square sd-btn-size-medium sd-btn-status-normal" type="button">
      <!--v-if-->Item16
    </button></div>
  <!---->
  <div class="sd-space-item"><button class="sd-btn sd-btn-primary sd-btn-shape-square sd-btn-size-medium sd-btn-status-normal" type="button">
      <!--v-if-->Item17
    </button></div>
  <!---->
  <div class="sd-space-item"><button class="sd-btn sd-btn-primary sd-btn-shape-square sd-btn-size-medium sd-btn-status-normal" type="button">
      <!--v-if-->Item18
    </button></div>
  <!---->
  <div class="sd-space-item"><button class="sd-btn sd-btn-primary sd-btn-shape-square sd-btn-size-medium sd-btn-status-normal" type="button">
      <!--v-if-->Item19
    </button></div>
  <!---->
  <div class="sd-space-item"><button class="sd-btn sd-btn-primary sd-btn-shape-square sd-btn-size-medium sd-btn-status-normal" type="button">
      <!--v-if-->Item20
    </button></div>
</div>
`;
